@@ -11,6 +11,7 @@ NEW FEATURES
 (raf) Plugins: Added sample sourcecode for a simple visualizer plugin to the release.
 BUG FIXES
 (raf) Core: Fixed button repeat handling that broke when implemented the button mapping. (This also corrected problems with HPRM)
+(raf) Core: If resuming(from suspend) from a paused state, it would not continue from where it left off.
 KNOWN BUGS
 (raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.
 (raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).
